--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/journeywithashu/MAJOR-PROJECT#readme",
   "dependencies": {
     "ejs": "^4.0.1",
+    "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
+    "mate": "^0.21.0",
     "method-override": "^3.0.0",
     "mongoose": "^9.1.4"
   }
