--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^4.0.1",
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "joi": "^18.0.2",
     "mate": "^0.21.0",
     "method-override": "^3.0.0",
