--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/journeywithashu/MAJOR-PROJECT#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^4.0.1",
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
