--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "joi": "^18.0.2",
     "mate": "^0.21.0",
     "method-override": "^3.0.0",
-    "mongoose": "^9.1.4"
+    "mongoose": "^9.1.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^9.0.1"
   },
   "devDependencies": {
     "browser-sync": "^3.0.4"
