--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mate": "^0.21.0",
     "method-override": "^3.0.0",
     "mongoose": "^9.1.4",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^9.0.1"
