--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/journeywithashu/MAJOR-PROJECT#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
