--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "cloudinary": "^2.9.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^17.2.4",
-    "ejs": "^4.0.1",
-    "ejs-mate": "^4.0.0",
+    "ejs": "^3.0.2",
+    "ejs-mate": "^3.0.0",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
     "joi": "^18.0.2",
     "mate": "^0.21.0",
     "method-override": "^3.0.0",
+    "mongodb": "^7.1.0",
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
@@ -38,6 +39,6 @@
     "passport-local-mongoose": "^9.0.1"
   },
   "devDependencies": {
-    "browser-sync": "^3.0.4"
+    "browser-sync": "^1.6.5"
   }
 }
